--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>HackerRank Campus Crew SRMIST</title>
+    <link rel="icon" type="image/x-icon" href="./public/img/favicon.ico" />
+    <title>HRCC SRM</title>
   </head>
   <body>
     <div id="root"></div>
